<resources>
    <string name="app_name">Kolor Weather</string>
    <string name="imagen_de_clima">Imagen de clima</string>
    <string name="alcatraz_california">Alcatraz, California</string>
    <string name="no_data">No Data</string>
    <string name="tem_placeholder">%d C</string>
    <string name="precip_placeholder">%d %%</string>
    <string name="precip">PRECIP</string>
    <string name="temp">TEMP</string>
    <string name="daily_weather">DAILY WEATHER</string>
    <string name="hourly_weather">HOURLY WEATHER</string>
    <string name="language">en</string>
    <string name="units">si</string>
    <string name="network_error">NETWORK ERROR</string>
    <string name="retry">RETRY?</string>
    <string name="summary_of_the_week">Summary of the Week</string>
    <string name="daily_weather_d">Daily Weather</string>
    <string name="hourly_weather_d">Hourly Weather</string>
    <string name="summary_of_the_day">Summary of the Day</string>

</resources>
